--- a/app/src/main/res/layout/activity_area_map_full_screen.xml
+++ b/app/src/main/res/layout/activity_area_map_full_screen.xml
@@ -1,13 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl_ui_full_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
     tools:context="ua.itstep.android11.kharlamov.locationtask.activities.AreaMapFullScreenActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
     <ImageView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
