comments, style updates and minor bug fixes

--- a/app/src/main/res/layout/task_view_holder.xml
+++ b/app/src/main/res/layout/task_view_holder.xml
@@ -21,9 +21,8 @@
         android:id="@+id/rb_task_location_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/tv_task_description"
         android:layout_toRightOf="@+id/iv_task_completed"
-        android:layout_toEndOf="@+id/iv_task_completed"
-        android:layout_below="@+id/tv_task_description"/>
+        android:layout_toEndOf="@+id/iv_task_completed" />
 
 </RelativeLayout>
